--- a/debian/control.in
+++ b/debian/control.in
@@ -9,7 +9,7 @@ Build-Depends: debhelper-compat (= 13),
                dh-sequence-gnome,
                jq,
                libcairo2-dev (>= 1.2.0),
-               libfreetype6-dev (>= 2.8.0),
+               libfreetype-dev (>= 2.8.0),
                libgdk-pixbuf-2.0-dev (>= 2.23.5-2),
                libgirepository1.0-dev (>= 0.10.8),
                libglib2.0-dev (>= 2.50.0),
@@ -22,7 +22,7 @@ Build-Depends: debhelper-compat (= 13),
                valac (>= 0.17.5)
 Build-Depends-Indep: gi-docgen <!nodoc>,
 Rules-Requires-Root: no
-Standards-Version: 4.6.0
+Standards-Version: 4.6.2
 Vcs-Browser: https://salsa.debian.org/gnome-team/librsvg
 Vcs-Git: https://salsa.debian.org/gnome-team/librsvg.git
 Homepage: https://wiki.gnome.org/Projects/LibRsvg
